                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Daniel Fandrich (29 Jul 2008)
- Fixed --use-ascii to properly convert text files on Symbian OS, MS-DOS
  and OS/2.

Daniel Fandrich (28 Jul 2008)
- Fixed display of the interface bind address in the trace output when it's
  an IPv6 address.

- Added test cases 1045 through 1049 as simple tests of --interface using the
  localhost interface.

- Added test case 1050 to test --ftp-port with an IPv6 address

Daniel Stenberg (26 Jul 2008)
- David Bau filed bug report #2026240 "CURL_READFUNC_PAUSE leads to buffer
  overrun" (http://curl.haxx.se/bug/view.cgi?id=2026240) identifying two
  problems, and providing the fix for them:

  - CURL_READFUNC_PAUSE did in fact not pause the _sending_ of data that it is
    designed for but paused _receiving_ of data!

  - libcurl didn't internally set the read counter to zero when this return
    code was detected, which would potentially lead to junk getting sent to
    the server.

Daniel Fandrich (26 Jul 2008)
- Added test 1044 to test large file support in ftp with -I.

- Eliminate a unnecessary socket creation in Curl_getaddrinfo for an IPv4
  address in an IPv6 capable libcurl.

- Added feature in runtests.pl to select tests based on key word.

Daniel Fandrich (23 Jul 2008)
- Changed the long logfile elision code in runtests.pl to properly handle
  lines ending in \r.

- Changed references to TRUE and FALSE in the curl_easy_setopt man page to
  1 and zero, respectively, since TRUE and FALSE aren't part of the
  libcurl API.

Daniel Stenberg (23 Jul 2008)
- I went over the curl_easy_setopt man page and replaced most references to
  non-zero with the fixed value of 1. We should strive at making options
  support '1' for enabling them mentioned explicitly, as that then will allow