@@ -1,6 +1,7 @@
-# $Id: DISABLED,v 1.21 2008-07-15 03:36:39 danf Exp $
+# $Id: DISABLED,v 1.22 2008-07-30 07:24:59 danf Exp $
 # This file can be used to specify test cases that should not run when all
 # test cases are run by runtests.pl. Just add the plain test case numbers, one
 # per line.
 # Lines starting with '#' letters are treated as comments.
 1041
+1051
